--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 	<link rel="stylesheet" href="main/mobila.css"> 
 </head>
-<body>
+<body class="osnova">
     <header>
         <div class="shapka">
             <div><img src="main/logo.png" alt="Логотип компании" id="main/logoimg" width="100" height="100"></div>
