--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <li><a href="/about">21 ссылка</a></li> 
     </ol>
     </div>
+	<div id="tandf">
     <div class="table">
         <h2 id="table">Таблица</h2>
         <table>
